--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,9 @@ MEDIA QUERY da Desktop first
 /* Tablet */
 
 @media screen and (max-width: 768px){
+    body{
+        overflow-x: hidden;
+    }
 
     .container{
         max-width: 768px;
@@ -145,6 +148,9 @@ MEDIA QUERY da Desktop first
 /* Mobile */
 @media screen and (max-width: 480px){
 
+    body{
+        overflow-x: hidden;
+    }
     .row{
         flex-direction: column;
         align-items: center;
@@ -166,6 +172,7 @@ MEDIA QUERY da Desktop first
         width: 80%;
         margin: 20px 0;
     }
+
     .container{
         max-width: 480px;
     }
